force-app/main/default/objects/Meetup_Registration__c/Meetup_Registration__c.object-meta.xml
<CustomObject>
    <description>This object is intended to track registrations for a meetup as part of the Meetup app</description>
    <label>Meetup Registration</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetup Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>