force-app/main/default/objects/Meetup_Registration__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The users email who is registering for a meetup</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>