force-app/main/default/objects/Meetup_Registration__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>The first name of the user who is registering</description>
    <label>First Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>