force-app/main/default/objects/Meetup_Registration__c/fields/Meetup__c.field-meta.xml
<CustomField>
    <fullName>Meetup__c</fullName>
    <description>Master-Detail with Meetup to enforce sharing and required realtionship</description>
    <label>Meetup</label>
    <referenceTo>Meetup__c</referenceTo>
    <relationshipLabel>Meetup Registrations</relationshipLabel>
    <relationshipName>Meetup_Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>