force-app/main/default/objects/Meetup_Registration__c/listViews/My_Meetup_Registrations.listView-meta.xml
<ListView>
    <fullName>My_Meetup_Registrations</fullName>
    <columns>Meetup__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Meetup Registrations</label>
</ListView>